--- a/client/src/components/Jumbotron/Jumbotron.css
+++ b/client/src/components/Jumbotron/Jumbotron.css
@@ -2,12 +2,17 @@
 
 .jumbotron h1 {
   font-size: 32px;
-  ont-family: 'Ubuntu Condensed', sans-serif;
+  font-family: 'Ubuntu Condensed', sans-serif;
 
 }
 
 .jumbotron h2 {
   font-size: 26px;
-  ont-family: 'Ubuntu Condensed', sans-serif;
+  font-family: 'Ubuntu Condensed', sans-serif;
+
+}
+
+.jumbotron {
+  margin: 30px  0 0 0;
 
 }
